[package]
name = "folder"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package allows for scanning directories in parallel."
documentation = "https://docs.rs/folder"
homepage = "https://github.com/stainless-steel/folder"
repository = "https://github.com/stainless-steel/folder"
categories = ["filesystem"]
keywords = ["directory", "parallel", "recursive", "scan", "walk"]

[features]
asynchronous = ["futures", "loop/asynchronous"]

[dependencies]
futures = { version = "0.3", default-features = false, optional = true }
loop = "0.3.2"
walkdir = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
